2022-09-25  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-kla.el (ee-preferred-c-guess): new variable.
	(ee-kl-all-eds-for, ee-kl-best-ed-for, ee-kl-best-cs-for): new
	functions.
	(ee-preferred-c-here-without-guess): new function.
	(ee-preferred-c-here-with-guess): new function.
	(ee-preferred-c-here): new function.
	(ee-kl-c): use `ee-preferred-c-here'.

2022-09-24  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-kla.el (ee-kla2-insert, ee-kla2-bol, ee-kla2-flash): new
	functions.
	(eekla2): rewritten.
	(ee-kl-flash-sexp): new variable.

2022-09-23  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-kla.el (ee-kl-format, ee-kl-insert): these variables were
	renamed to `ee-kl-format1' and `ee-kl-format2' respectively.
	(ee-kl-format): this function was renamed to `ee-kl-format1'.
	(ee-kl-format2): new function.
	(ee-kl-format2-for-mode): new function.
	(ee-kl-sexp-to-string): new function.
	(ee-kl-kill): use `ee-kl-format1' and `ee-kl-sexp-to-string'.
	(ee-kl-insert): use `ee-kl-format2'.

2022-09-20  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-kla-test-intro): mark as "currently broken".

	* eev-eval.el (ee-backward-sexp, ee-forward-sexp): use `(let
	((forward-sexp-function nil)) ...)'. This makes `M-e' work
	correctly in haskell-mode.

	* eev-kla.el (ee-kl-insert): new variable.
	(ee-kl-insert): new function.
	(kli): new alias (suggested in comments at the end of the file).

2022-09-18  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-kla.el: small changes in the docs.
	(ee-kl-sexp-klt, eeklt): new functions.
	(ee-kl-format): new function.
	(ee-kl-kill): use the function `ee-kl-format'.

2022-09-17  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-edit.el (ee-preceding-tag-flash): new function.
	(ee-copy-preceding-tag-to-kill-ring): use
	`ee-preceding-tag-flash'.

	* eev-kla.el: totally rewritten.

2022-09-06  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-elinks.el (find-ecolor-links): added (read-color).

2022-09-05  Eduardo Ochs  <eduardoochs@gmail.com>
